--- a/index.html
+++ b/index.html
@@ -3,6 +3,6 @@ layout: default
 title: Christophe Boutter
 ---
 <div class="blurb">
-	<h1>Hi there, I'm Hank Quinlan!</h1>
-	<p>I'm best known as the horrible cop from <em>A Touch of Evil</em> Don't trust me. <a href="/about">Read more about my life...</a></p>
+	<h1>Hi there, I'm Christophe Boutter!</h1>
+	<p>I'm a german agilist, doing Java and dreaming about Ruby. <a href="/about">Read more about me...</a></p>
 </div><!-- /.blurb -->
