--- a/default.html
+++ b/default.html
@@ -10,7 +10,6 @@
 	    		<ul>
 	        		<li><a href="/">Home</a></li>
 		        	<li><a href="/about">About</a></li>
-	        		<li><a href="/cv">CV</a></li>
 	        		<li><a href="/blog">Blog</a></li>
 	    		</ul>
 			</nav>
@@ -23,6 +22,7 @@
 	    		<ul>
 	        		<li><a href="mailto:cboutter@gmail.com">email</a></li>
 	        		<li><a href="https://github.com/cboutter">github.com/cboutter</a></li>
+	        		<li><a href="http://cboutter.github.io/blog/atom.xml">feed</a></li>
 				</ul>
 			</footer>
 		</body>
