--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 layout: default
 title: Christophe Boutter
 ---
-<div class="blurb">
-	<h1>Hi there, I'm Christophe Boutter!</h1>
-	<p>I'm a german agilist, doing Java and dreaming about Ruby. <a href="/about">Read more about me...</a></p>
-</div><!-- /.blurb -->
+<div class="blog-index">  
+  {% assign post = site.posts.first %}
+  {% assign content = post.content %}
+  <!--{% include post_detail.html %}-->
+</div>
