Next try blog post on front page.

--- a/index.html
+++ b/index.html
@@ -5,4 +5,5 @@ title: Christophe Boutter
 <div class="blog-index">  
   {% assign post = site.posts.first %}
   {% assign content = post.content %}
+  {% include post_detail.html %}
 </div>
