--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: Christophe Boutter
+title: Christophe Boutter's little website
 ---
 <div class="blog-index">  
   {% assign post = site.posts.first %}
