--- a/about/index.html
+++ b/about/index.html
@@ -5,4 +5,5 @@ title: About
 <div class="blurb">
 	<h1>About</h1>
 	<p>I'm a german agilist, doing Java and dreaming about Ruby. <a href="http://stackoverflow.com/users/story/15108">Read more about me on my Stackoverflow story...</a></p>
+	<p>Why this site you're asking? Mainly because I wanted to have a place to host some older blog posts I did, which I don't want to simply disappear because a company takes down their blog.</p>
 </div><!-- /.blurb -->
